fix model and dashboard

--- a/FlightSimulatorApp/Views/Dashboard.xaml
+++ b/FlightSimulatorApp/Views/Dashboard.xaml
@@ -24,14 +24,13 @@
 
         <!-- The DashBoard table-->
         <TextBlock Text="Heading"        Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="vertical speed" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="ground speed"   Grid.Column="0" Grid.Row="4" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="air speed"      Grid.Column="0" Grid.Row="6" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="air speed"      Grid.Column="0" Grid.Row="6" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="GPS altitude"   Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="roll"           Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="pitch"          Grid.Column="1" Grid.Row="4" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
-        <TextBlock Text="altimiter"      Grid.Column="1" Grid.Row="6" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="Vertical speed" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="Ground speed"   Grid.Column="0" Grid.Row="4" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="Air speed"      Grid.Column="0" Grid.Row="6" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="GPS Altitude"   Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="Roll"           Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="Pitch"          Grid.Column="1" Grid.Row="4" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
+        <TextBlock Text="Altimiter"      Grid.Column="1" Grid.Row="6" HorizontalAlignment="Center" FontSize="20" FontWeight ="Bold"/>
         
         <!-- The DashBoard values-->
         <TextBlock Text="{Binding VM_Heading,       Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" FontSize="20" />
