fix map and plane

--- a/FlightSimulatorApp/MainWindow.xaml
+++ b/FlightSimulatorApp/MainWindow.xaml
@@ -24,10 +24,7 @@
         <Views:Joystick Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2"
                         Grid.RowSpan="2" Margin="2.667,5.333,-2.667,-5.333">
         </Views:Joystick>
-        <m:Map CredentialsProvider="KNb2QQlW7tEMpEKBt8fQ~K6enCIZunN9K2SKgHKtfog~Aspy4IyzSNwylc9HiGkKOnJx96eDR2bTM280wsfAusuFq1fPAlylMlM8kawmZfoi"
-               Mode="AerialWithLabels" Center="32.0055, 34.8854" ZoomLevel="13" Grid.ColumnSpan="2" Margin="0,0,0.333,3.333" Grid.RowSpan="4">
-            <m:Pushpin Name="pos" Location="{Binding VM_Location}"></m:Pushpin>
-        </m:Map>
+        <Views:Map Grid.ColumnSpan="2" Margin="-10,4,0.333,0.667" Grid.RowSpan="4"/>
         <Views:Dashboard Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2"
                         Grid.RowSpan="2">
         </Views:Dashboard>
