--- a/FlightSimulatorApp/Views/Map.xaml
+++ b/FlightSimulatorApp/Views/Map.xaml
@@ -7,11 +7,19 @@
              mc:Ignorable="d" 
              xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ControlTemplate x:Key="Airplane" TargetType="m:Pushpin">
+            <Grid>
+                <StackPanel>
+                    <Image Source="airplane.png"/>
+                </StackPanel>
+            </Grid>
+        </ControlTemplate>
+    </UserControl.Resources>
     <Grid>
         <m:Map CredentialsProvider="KNb2QQlW7tEMpEKBt8fQ~K6enCIZunN9K2SKgHKtfog~Aspy4IyzSNwylc9HiGkKOnJx96eDR2bTM280wsfAusuFq1fPAlylMlM8kawmZfoi"
                Mode="AerialWithLabels" Center="32.0055, 34.8854" ZoomLevel="12" Grid.ColumnSpan="2" Margin="0,0,0.333,3.333" Grid.RowSpan="4">
-            <m:Pushpin Name="pos" Location="{Binding VM_Location}">
-            </m:Pushpin>
+            <m:Pushpin Name="pos" Template="{StaticResource Airplane}" Location="{Binding VM_Location}"></m:Pushpin>
         </m:Map>
     </Grid>
 </UserControl>
