--- a/FlightSimulatorApp/MainWindow.xaml
+++ b/FlightSimulatorApp/MainWindow.xaml
@@ -7,7 +7,10 @@
         mc:Ignorable="d"
         xmlns:Views="clr-namespace:FlightSimulatorApp.Views"
         Title="MainWindow" Height="750" Width="1000">
-    <Grid>
+    <Grid Margin="0,0,1.6,-0.2">
+        <Grid.Background>
+            <ImageBrush ImageSource="main_window_Background.jpg"/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -20,12 +23,14 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text=" port:" FontSize="50" Grid.ColumnSpan="2" Margin="41,51,207.8,128.8" Grid.RowSpan="2"/>
-        <TextBox x:Name="port" Grid.Column="1" Padding="5" Margin="10,45,248.6,55.8" Text="0.0" FontSize="50" Grid.ColumnSpan="2"/>
-        <TextBlock Text=" ip" FontSize="50" Grid.ColumnSpan="2" Margin="72,46.2,176.8,132.8" Grid.RowSpan="2" Grid.Row="1"/>
-        <Button x:Name="Ok" Content="Ok" FontSize="50" Click="Ok_Click" Grid.ColumnSpan="2" Margin="128,0.2,120.8,178.8" Grid.Row="2" Grid.RowSpan="2"/>
-        <TextBox x:Name="ip" Grid.Column="1" Padding="5" Margin="10,43.2,248.6,54.8" Text="0.0" FontSize="50" Grid.Row="1" Grid.ColumnSpan="2"/>
-        <Button x:Name="Default" Content="Default" FontSize="50" Grid.ColumnSpan="2" Margin="137.2,178.2,111.6,0.8" Grid.Row="1" Grid.RowSpan="2" Grid.Column="2" Click="Default_Click"/>
-
+        <Label Content="Flight - Simulator" HorizontalAlignment="Left" Margin="6,14,0,0" VerticalAlignment="Top" FontSize="60" Grid.ColumnSpan="2" Width="489" Grid.Column="2"/>
+        <Label Content=" Connect:" HorizontalAlignment="Center" Margin="31,170.2,41,0" VerticalAlignment="Top" FontSize="40" Grid.Row="1" Grid.RowSpan="2" />
+        <Label Content=" port:" FontSize="40" Margin="37,64.2,55,39.8" Grid.Row="2"/>
+        <TextBox x:Name="port" Padding="5" Margin="174,74.2,133,48.8" Text="0" FontSize="35" Grid.ColumnSpan="2" Grid.Row="2"/>
+        <Label Content=" ip:" FontSize="40" Margin="87,134.2,5,149.8" Grid.Row="2" Grid.RowSpan="2"/>
+        <TextBox x:Name="ip" Padding="5" Margin="174,145.2,133,149.8" Text="0.0.0.0" FontSize="35" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+        <Button x:Name="Ok" Content="ok" FontSize="40" Click="Ok_Click" Margin="118,61.2,52,61.8" Grid.Row="3" Grid.Column="1"/>
+        <Button x:Name="Default" Content="Default" FontSize="35" Margin="178,57.2,0,63.8" Grid.Row="3" Click="Default_Click" HorizontalAlignment="Left" Width="166" Grid.ColumnSpan="2"/>
+        <Button x:Name="Exit" Content="Exit" FontSize="30"  Margin="106,61.2,64,61.8" Grid.Row="3" Grid.Column="3" Click="Exit_Click"/>
     </Grid>
 </Window>
