--- a/FlightSimulatorApp/Views/Errors.xaml
+++ b/FlightSimulatorApp/Views/Errors.xaml
@@ -13,6 +13,7 @@
         </Grid.ColumnDefinitions>
         <TextBlock Text="Error message: " Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" FontWeight ="Bold"/>
         <TextBlock Text="{Binding VM_ConnectionError, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" />
+        <TextBlock Text="{Binding VM_FormatError,    Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" />
         <TextBlock Text="{Binding VM_TimeoutError,    Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" />
     </Grid>
 </UserControl>
