--- a/FlightSimulatorApp/Views/View.xaml
+++ b/FlightSimulatorApp/Views/View.xaml
@@ -19,11 +19,10 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
         <!--Joystick view-->
-        <Viewbox Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2"
-                        Grid.RowSpan="2" Margin="2.667,5.333,-2.667,-5.333">
+        <Viewbox Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="2" Margin="2.667,5.333,-2.667,-5.333">
             <Views:NewJoystick x:Name="Joystick"/>
         </Viewbox>
         <!--Map view-->
@@ -33,8 +32,8 @@
                         Grid.RowSpan="3" Margin="66.667,0,0.333,143.667">
         </Views:Dashboard>
         <!--Error view-->
-        <Views:Errors x:Name="error" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="2" Grid.RowSpan="2">
-        </Views:Errors>
+        <Views:Errors x:Name="error" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="0.2,0.2,-2.4,-0.2" Background="#FFE7C887"/>
+        <!--Disconnect-->
         <Button x:Name="disconnect" Content="Disconnect" Grid.Row="4" Click="disconnect_Click" FontSize="25"/>
     </Grid>
 </Window>
